--- a/src/main/webapp/app/nodoLteCreate.xhtml
+++ b/src/main/webapp/app/nodoLteCreate.xhtml
@@ -48,7 +48,7 @@
                                             #{s.sigla}
                                         </p:column>
                                         <p:column headerText="Nombre">
-                                            #{s.nombre} #{s.departamento.nombre}
+                                            #{s.nombre} #{s.sede.nombre}
                                         </p:column>
                                     </p:autoComplete>
                                 </p:column>
