--- a/src/main/webapp/app/nodoLteUpdate.xhtml
+++ b/src/main/webapp/app/nodoLteUpdate.xhtml
@@ -50,7 +50,7 @@
                                             #{s.sigla}
                                         </p:column>
                                         <p:column headerText="Nombre">
-                                            #{s.nombre} #{s.departamento.nombre}
+                                            #{s.nombre} #{s.sede.nombre}
                                         </p:column>
                                         <p:ajax event="itemSelect" update="sitioLink"/>
                                     </p:autoComplete>
