--- a/src/main/webapp/app/departamentoList.xhtml
+++ b/src/main/webapp/app/departamentoList.xhtml
@@ -9,9 +9,9 @@
 <ui:composition template="/templates/fullLayout.xhtml">
     <ui:define name="content">
         <h:form id="form">
-            <p:dataTable id="dataTable" var="item" value="#{departamentoController.lazyModel}"
+            <p:dataTable id="dataTable" var="item" value="#{sedeController.lazyModel}"
                          styleClass="dataTableStyle"
-                         paginator="true" rows="10" selection="#{departamentoController.selectedItems}"
+                         paginator="true" rows="10" selection="#{sedeController.selectedItems}"
                          emptyMessage="#{msg.noRecordsFound}"
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          lazy="true" rowsPerPageTemplate="10,25,50">
@@ -22,14 +22,14 @@
                     <p:commandButton icon="ui-icon-search" update=":itemDetailForm:display"
                                      title="Ver"
                                      oncomplete="PF('itemDialog').show()">
-                        <f:setPropertyActionListener value="#{item}" target="#{departamentoController.selectedItem}"/>
+                        <f:setPropertyActionListener value="#{item}" target="#{sedeController.selectedItem}"/>
                     </p:commandButton>
                 </p:column>
                 <p:column style="width:22px" rendered="#{authorizationChecker.admin}">
                     <p:commandButton icon="ui-icon-pencil" update=":itemDetailForm:display"
                                      title="Modificar"
                                      oncomplete="PF('itemDialog').show()">
-                        <f:setPropertyActionListener value="#{item}" target="#{departamentoController.selectedItem}"/>
+                        <f:setPropertyActionListener value="#{item}" target="#{sedeController.selectedItem}"/>
                     </p:commandButton>
                 </p:column>
 
@@ -40,7 +40,7 @@
                     </f:facet>
                     <p:commandLink value="#{item.nombre}" update=":itemDetailForm:display"
                                    oncomplete="PF('itemDialog').show()" title="Ver">
-                        <f:setPropertyActionListener value="#{item}" target="#{departamentoController.selectedItem}"/>
+                        <f:setPropertyActionListener value="#{item}" target="#{sedeController.selectedItem}"/>
                     </p:commandLink>
                 </p:column>
 
@@ -48,21 +48,21 @@
                     <p:commandButton value="Nuevo Departamento" oncomplete="PF('newItemDialog').show()"
                                      icon="ui-icon-star"
                                      title="Crear nuevo Departamento" rendered="#{authorizationChecker.admin}"/>
-                    <p:commandButton value="Modificar Departamento" actionListener="#{departamentoController.doUpdate}"
+                    <p:commandButton value="Modificar Departamento" actionListener="#{sedeController.doUpdate}"
                                      update=":itemDetailForm:display"
                                      icon="ui-icon-pencil"
                                      title="Modificar Departamento"
                                      oncomplete="if (!args.validationFailed) {PF('itemDialog').show()}"
                                      rendered="#{authorizationChecker.admin}">
                     </p:commandButton>
-                    <p:commandButton value="Ver Departamento" actionListener="#{departamentoController.doUpdate}"
+                    <p:commandButton value="Ver Departamento" actionListener="#{sedeController.doUpdate}"
                                      update=":itemDetailForm:display"
                                      icon="ui-icon-pencil"
                                      title="Ver Departamento"
                                      oncomplete="if (!args.validationFailed) {PF('itemDialog').show()}"
                                      rendered="#{not authorizationChecker.admin}">
                     </p:commandButton>
-                    <p:commandButton value="Eliminar Departamento" actionListener="#{departamentoController.doDelete}"
+                    <p:commandButton value="Eliminar Departamento" actionListener="#{sedeController.doDelete}"
                                      update="dataTable" icon="ui-icon-trash" rendered="#{authorizationChecker.admin}">
                         <p:confirm header="Confirmación" message="#{msg.askConfirmAction}"
                                    icon="ui-icon-alert"/>
@@ -75,7 +75,7 @@
             <h:form id="itemDetailForm">
                 <p:panelGrid id="display" columns="2" cellpadding="4" style="margin:0 auto;">
                     <p:outputLabel for="displayModelo" value="Nombre:"/>
-                    <p:inputText id="displayModelo" value="#{departamentoController.selectedItem.nombre}"
+                    <p:inputText id="displayModelo" value="#{sedeController.selectedItem.nombre}"
                                  required="true"
                                  requiredMessage="Por favor ingresar nombre"
                                  readonly="#{not authorizationChecker.admin}"/>
@@ -83,7 +83,7 @@
                     <f:facet name="footer">
                         <p:commandButton value="Actualizar" update=":form:dataTable, :growl"
                                          oncomplete="handleSubmitRequest(xhr, status, args, 'itemDlg','itemDetailForm'); "
-                                         action="#{departamentoController.doConfirmUpdate}"
+                                         action="#{sedeController.doConfirmUpdate}"
                                          rendered="#{authorizationChecker.admin}"/>
                         <p:commandButton value="Cancelar" onclick="itemDialog.hide()"
                                          immediate="true" rendered="#{authorizationChecker.admin}"/>
@@ -98,13 +98,13 @@
             <h:form id="newItemForm">
                 <p:panelGrid id="displayNewTipoAntena" columns="2" cellpadding="4" style="margin:0 auto;">
                     <p:outputLabel for="newItemModelo" value="Nombre:"/>
-                    <p:inputText id="newItemModelo" value="#{departamentoController.newItem.nombre}" required="true"
+                    <p:inputText id="newItemModelo" value="#{sedeController.newItem.nombre}" required="true"
                                  requiredMessage="Por favor ingresar nombre"/>
 
                     <f:facet name="footer">
                         <p:commandButton value="Confirmar" update=":form:dataTable, :growl"
                                          oncomplete="handleSubmitRequest(xhr, status, args, 'newItemDlg','newItemForm');"
-                                         actionListener="#{departamentoController.doCreate}"/>
+                                         actionListener="#{sedeController.doCreate}"/>
                         <p:commandButton value="Cancelar" onclick="newItemDlg.hide()"
                                          immediate="true"/>
                     </f:facet>
