--- a/src/main/webapp/app/sedeList.xhtml
+++ b/src/main/webapp/app/sedeList.xhtml
@@ -16,7 +16,7 @@
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          lazy="true" rowsPerPageTemplate="10,25,50">
                 <f:facet name="header">
-                    Lista de Departamentos
+                    Lista de Sedes
                 </f:facet>
                 <p:column style="width:22px">
                     <p:commandButton icon="ui-icon-search" update=":itemDetailForm:display"
