--- a/src/main/webapp/app/nodoLteList.xhtml
+++ b/src/main/webapp/app/nodoLteList.xhtml
@@ -25,7 +25,8 @@
                         <f:setPropertyActionListener value="#{item}" target="#{nodoLteController.selectedItem}"/>
                     </p:commandButton>
                 </p:column>
-                <p:column style="width:22px" rendered="#{authorizationChecker.admin or authorizationChecker.consola}">
+                <p:column style="width:22px"
+                          rendered="#{authorizationChecker.admin or authorizationChecker.completado}">
                     <p:commandButton icon="ui-icon-pencil"
                                      title="Modificar" action="#{nodoLteController.doUpdate}">
                         <f:setPropertyActionListener value="#{item}" target="#{nodoLteController.selectedItem}"/>
@@ -70,11 +71,11 @@
                 <f:facet name="footer">
                     <p:commandButton value="Nuevo Nodo LTE" icon="ui-icon-star" action="#{nodoLteController.doCreate}"
                                      title="Crear nuevo Nodo LTE"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.consola}"/>
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.completado}"/>
                     <p:commandButton value="Modificar Nodo LTE" action="#{nodoLteController.doUpdate}"
                                      icon="ui-icon-pencil"
                                      title="Modificar Nodo LTE" disabled="#{nodoLteController.lazyModel.rowCount eq 0}"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.consola}">
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.completado}">
                         <f:setPropertyActionListener value="#{null}" target="#{nodoLteController.selectedItem}"/>
                     </p:commandButton>
                     <p:commandButton value="Ver Nodo LTE" action="#{nodoLteController.doView}"
