--- a/src/main/webapp/app/preventivoList.xhtml
+++ b/src/main/webapp/app/preventivoList.xhtml
@@ -27,7 +27,7 @@
                     </p:commandButton>
                 </p:column>
                 <p:column style="width:22px !important"
-                          rendered="#{authorizationChecker.admin or authorizationChecker.consola}">
+                          rendered="#{authorizationChecker.admin or authorizationChecker.completado}">
                     <p:commandButton icon="ui-icon-pencil"
                                      title="Modificar" action="#{preventivoController.doUpdate}">
                         <f:setPropertyActionListener value="#{item}" target="#{preventivoController.selectedItem}"/>
@@ -79,13 +79,13 @@
                     <p:commandButton value="Nuevo Mantenimiento preventivo" icon="ui-icon-star"
                                      action="#{preventivoController.doCreate}"
                                      title="Crear nuevo Mantenimiento preventivo"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.tecnico}"/>
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.verificacion}"/>
                     <p:commandButton value="Modificar Mantenimiento preventivo"
                                      action="#{preventivoController.doUpdate}"
                                      icon="ui-icon-pencil"
                                      title="Modificar Mantenimiento preventivo"
                                      disabled="#{preventivoController.lazyModel.rowCount eq 0}"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.tecnico}">
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.verificacion}">
                         <f:setPropertyActionListener value="#{null}" target="#{preventivoController.selectedItem}"/>
                     </p:commandButton>
                     <p:commandButton value="Ver Mantenimiento preventivo" action="#{preventivoController.doView}"
