--- a/src/main/webapp/app/sitioList.xhtml
+++ b/src/main/webapp/app/sitioList.xhtml
@@ -31,7 +31,8 @@
                         <f:setPropertyActionListener value="#{item}" target="#{sitioController.selectedItem}"/>
                     </p:commandButton>
                 </p:column>
-                <p:column style="width:22px" rendered="#{authorizationChecker.admin or authorizationChecker.consola}">
+                <p:column style="width:22px"
+                          rendered="#{authorizationChecker.admin or authorizationChecker.completado}">
                     <p:commandButton icon="ui-icon-pencil" update=":SitioDetailForm:display"
                                      title="Modificar" action="#{sitioController.doUpdate}">
                         <f:setPropertyActionListener value="#{item}" target="#{sitioController.selectedItem}"/>
@@ -79,9 +80,9 @@
                 <f:facet name="footer">
                     <p:commandButton value="Nuevo Sitio" icon="ui-icon-star" action="#{sitioController.doCreate}"
                                      title="Crear nuevo Sitio"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.consola}"/>
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.completado}"/>
                     <p:commandButton value="Modificar Sitio" action="#{sitioController.doUpdate}"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.consola}"
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.completado}"
                                      icon="ui-icon-pencil"
                                      title="Modificar Sitio">
                         <f:setPropertyActionListener value="#{null}" target="#{sitioController.selectedItem}"/>
@@ -93,7 +94,7 @@
                     </p:commandButton>
                     <p:commandButton value="Eliminar Sitio" actionListener="#{sitioController.doConfirmDelete}"
                                      update="dataTable" icon="ui-icon-trash"
-                                     rendered="#{authorizationChecker.admin or authorizationChecker.consola}">
+                                     rendered="#{authorizationChecker.admin or authorizationChecker.completado}">
                         <p:confirm header="Confirmación" message="#{msg.askConfirmAction}"
                                    icon="ui-icon-alert"/>
                     </p:commandButton>
